<resources>
    <string name="app_name">Tu peso ideal</string>

    <string name="txtViewMain">Calcular tu peso ideal</string>
    <string name="btnMain">Iniciar</string>

    <string name="txtViewSex">Seleccione su genero</string>
    <string name="btnMaleSex">Hombre</string>
    <string name="btnFemaleSex">Mujer</string>

    <string name="hintAndTxtViewHeight">Introduzca su altura</string>

    <string name="hintAndTxtViewWeight">Introduzca su peso</string>

    <string name="btnSiguiente">Siguiente</string>

    <string name="btnResult">Volver a intentarlo</string>
    <string name="TxtResult1">Resultados</string>

    <string name="hintAndTxtViewWrist">Introduzca la circunferencia de su muñeca</string>

    <string name="resultPesoIdeal">Su peso ideal es: %1$s %2$s</string>
    <string name="resultSex">Su genero es: %1$s</string>
    <string name="resultHeight">Su altura es: %1$s %2$s</string>
    <string name="resultWeight">Su peso es: %1$s %2$s</string>
    <string name="resultImc">Su Indice de Masa Corporal es: %1$s</string>
    <string name="resultC">Su Complexion es: %1$s</string>
    <string name="resultWeightNeed1">Necesita perder: %1$s %2$s</string>
    <string name="resultWeightNeed2">Necesita ganar: %1$s %2$s</string>
    <string name="infoResult">*Estos resultados no son un sustituto de una consulta medica*</string>
    <string name="resultImage">Tipo de peso</string>

    <string name="principalResultWeight">%1$s</string>

</resources>
